fix minor gap in waybar

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -141,6 +141,8 @@
 }
 
 #clock.time {
+  /* because this is the furthest to the right */
+  margin-right: 0;
   border-color: @blue;
 }
 
